--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,26 @@
 <resources>
-    <string name="app_name">mrgtodolist</string>
+    <string name="app_name">Mirage TODO</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Mirage TODO</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+
+    <string name="nav_menu_title_appearance">Appearance</string>
+    <string name="nav_menu_title_privacy">Privacy</string>
+    <string name="nav_menu_title_notifications">Notifications</string>
+    <string name="nav_menu_title_synchronization">Synchronization</string>
+
+    <string name="nav_menu_btn_theme">Change theme</string>
+    <string name="nav_menu_btn_password">Set password</string>
+    <string name="nav_menu_btn_notification_settings">Notification settings</string>
+    <string name="nav_menu_btn_sync_with_google_drive">Sync with Google Drive</string>
+
+    <string name="nav_menu_author">Author: </string>
+    <string name="nav_menu_version">Version: </string>
+
 </resources>
