--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="task_default_title">Task</string>
+    <string name="task_default_description">No description</string>
 
     <string name="toolbar_title_archive">Archive</string>
     <string name="toolbar_title_todo">Current tasks</string>
