--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="drawer_btn_tags">Tags</string>
     <string name="drawer_btn_settings">Settings</string>
 
+    <string name="settings_activity_title">Settings</string>
     <string name="settings_title_appearance">Appearance</string>
     <string name="settings_title_privacy">Privacy</string>
     <string name="settings_title_notifications">Notifications</string>
