--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,13 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="title_activity_maps">Current Place Details</string>
+    <string name="location_activity_title">Select task location</string>
     <string name="default_info_title">Default Location</string>
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
-    <string name="option_get_place">Get place</string>
+    <string name="location_save_location">Save</string>
     <string name="pick_place">Choose a place</string>
+    <string name="location_current_title">Selected location</string>
+    <string name="location_select_toast">Click on the map to select a location</string>
 
     <string name="task_default_title">Task</string>
     <string name="task_default_description">No description</string>
